plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'org.sonarqube' version '5.1.0.4882'
}

group = 'com.foreigner'
version = '0.0.1-SNAPSHOT'

java {
	toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

configurations {
	compileOnly { extendsFrom annotationProcessor }
}

repositories { mavenCentral() }

ext {
	// Boot 3.5.x ↔ Cloud 2025.0.x (호환 BOM)
	set('springCloudVersion', '2025.0.0')
}

dependencies {
    // --- Spring ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-logging'
    implementation 'org.springframework.security:spring-security-messaging'

    // --- DB ---
    runtimeOnly   'org.postgresql:postgresql'

    // --- OpenAPI(UI) ---
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

    // --- OpenFeign ---
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    // x-www-form-urlencoded 인코딩 (필수)
    implementation 'io.github.openfeign.form:feign-form:3.8.0'
    implementation 'io.github.openfeign.form:feign-form-spring:3.8.0'

    // --- BouncyCastle ---
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'

    // --- JWT (권장: jackson 모듈 포함) ---
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // --- Lombok / Test ---
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation "org.junit.jupiter:junit-jupiter:5.10.3"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // --- QueryDSL (Jakarta) ---
    implementation "com.querydsl:querydsl-core:5.1.0"
    implementation "com.querydsl:querydsl-jpa:5.1.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // --- Config Processor ---
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    // --- OAuth2 Resource Server ---
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // --- AWS SDK v2 ---
    implementation 'software.amazon.awssdk:s3:2.25.39'
    implementation 'software.amazon.awssdk:auth:2.25.39'
    implementation 'software.amazon.awssdk:regions:2.25.39'

    // --- GCP / Firebase ---
    implementation 'com.google.cloud:google-cloud-translate:2.38.0'
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // --- Jackson ---
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // --- Cache ---
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // --- Resilience4j ---
    implementation "io.github.resilience4j:resilience4j-spring-boot3:2.2.0"
    implementation "io.github.resilience4j:resilience4j-retry:2.2.0"

    // --- Observability / Logging ---
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation "io.micrometer:micrometer-tracing-bridge-brave"
    implementation "org.codehaus.janino:janino:3.1.12"

    implementation("org.flywaydb:flyway-core")
    implementation("org.flywaydb:flyway-database-postgresql")

    implementation 'org.jsoup:jsoup:1.17.2'
    implementation 'org.htmlunit:htmlunit:3.11.0'
    implementation 'org.webjars.npm:cropperjs:1.5.13'

    implementation 'org.springframework.security:spring-security-messaging'

    implementation 'org.springframework.retry:spring-retry:2.0.6'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
}



dependencyManagement {
	imports {
		// ★ Cloud BOM 반드시 포함 (없으면 @FeignClient 인식 안 됨)
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
}

jacoco {
    toolVersion = "0.8.12" // 최신권장
}
tasks.jacocoTestReport {
    dependsOn tasks.test
    reports {
        xml.required.set(true)
        html.required.set(true)
    }

    // 리포트 생성 시 제외할 클래스들 (JaCoCo 기준)
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/Q*",                         // QueryDSL
                    "**/*Dto*",                      // DTO
                    "**/*Application*",              // 메인 애플리케이션
                    "**/*Config*",                   // 설정 파일
                    "**/global/docs/**"              // 문서화 관련 (NotionSync 등)
            ])
        }))
    }
}

tasks.named('jacocoTestCoverageVerification', JacocoCoverageVerification) {
    dependsOn tasks.jacocoTestReport
    violationRules {
        rule {
            element = 'BUNDLE'
            limit {
                counter = 'LINE'
                value   = 'COVEREDRATIO'
                minimum = 0.50 // 50%로 상향 조정됨
            }
        }
    }
}

sonarqube {
    properties {
        property "sonar.organization", "swyp-foreigner"
        property "sonar.projectKey", "SWYP-foreigner_Kori_Be"
        property "sonar.projectName", "Kori_Be"
        property "sonar.host.url", System.getenv("SONAR_HOST_URL") ?: "https://sonarcloud.io"

        if (System.getenv("SONAR_TOKEN") != null) {
            property "sonar.token", System.getenv("SONAR_TOKEN")
        }

        // 최신 Gradle 문법 반영
        property "sonar.java.binaries", "${layout.buildDirectory.get()}/classes"
        property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"

        // 소나큐브 대시보드에서 제외할 파일들 (파일 경로 기준)
        property "sonar.exclusions", "**/test/**, **/resources/**, **/Q*.java, **/*Dto.java, **/*Config.java, **/*Application.java"

        // Quality Gate 통과 대기 (CI 환경)
        property "sonar.qualitygate.wait", (System.getenv("CI") == "true").toString()
    }
}

/** 서버 기동 전 프리플라이트(테스트→커버리지→체크) */
tasks.register('preflight') {
    group = "verification"
    description = "Run tests, coverage and verification before starting server."
    dependsOn tasks.clean, tasks.test, tasks.jacocoTestReport, tasks.check
}
//
//// 최신화된 Errorcode 노션으로 보내기
//tasks.register('runNotionSync', JavaExec) {
//    group = "notion"
//    description = "Sync error codes to Notion"
//    classpath = sourceSets.main.runtimeClasspath
//    mainClass = 'core.global.docs.NotionSyncRunner'
//}
//
//// build 전에 실행되도록 의존성 추가
//tasks.named('build') {
//    dependsOn 'runNotionSync'
//}